--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -124,7 +124,7 @@ header {
     font-size: 1rem;
     border-radius: 6px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 1000px;
 
 }
 
@@ -148,6 +148,27 @@ header {
 .form-group input:focus {
     border-color: #ffcc00;
     outline: none;
+}
+
+/*checkboxes*/
+.checkbox-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.checkbox-container input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+.checkbox-container label {
+    margin-right: 15px; /* Adjust to control spacing between checkboxes */
+}
+
+.checkbox-container div {
+    display: flex;
+    align-items: center;
 }
 
 /* Hero Section */
